--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -49713,6 +49713,7 @@ html[dir=rtl] body.dark-only .page-wrapper .page-body-wrapper .page-body .card:n
   background-color: #FFE8EA;
   color: #DC3545;
   font-weight: 500;
+  padding: 10px 20px;
 }
 
 
