--- a/public/assets-home/style.css
+++ b/public/assets-home/style.css
@@ -108,7 +108,7 @@ html,
 body,
 .wrapper {
     height: 100%;
-    overflow-x: hidden !important;
+    /* overflow-x: hidden !important; */
 }
 
 h1,
