--- a/public/assets-home/style.css
+++ b/public/assets-home/style.css
@@ -7521,24 +7521,23 @@ footer .footer-bottom li:first-child::before {
     display: none;
 }
 
+
 footer .footer-bottom-box {
     padding: 50px 0;
-    padding-right: 80px;
+    width: 150%;
+    left: -27%;
     position: relative;
-    z-index: 1;
+    background: #24282b;
+    z-index: -1;
+    opacity: 0.8;
 }
 
 footer .footer-bottom-box::after {
     position: absolute;
-    right: 0;
     top: 0;
     content: "";
     height: 100%;
-    width: 400%;
-    background: #24282b;
-    z-index: -1;
-    opacity: 0.8;
-    clip-path: polygon(0 0, 99% 0, 100% 100%, 10% 100%);
+    width: 500%;
 }
 
 /* ==============================================================
