--- a/public/assets-home/style.css
+++ b/public/assets-home/style.css
@@ -7528,6 +7528,7 @@ footer .footer-bottom-box {
     position: relative;
     z-index: -1;
     opacity: 0.8;
+    background: transparent;
 }
 
 footer .footer-bottom-box::after {
